<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Accounting</string>
    <string name="action_settings">Settings</string>
    <string name="about">About</string>
    <string name="login_success">login success</string>
    <string name="login">LOGIN</string>
    <string name="Username">Email</string>
    <string name="Password">Password</string>
    <string name="forgot_your_password">Forgot your password ?</string>
    <string name="go">GO</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="next">NEXT</string>
    <string name="register">REGISTER</string>
    <string name="not_found_customer">Not found customer</string>
    <string name="valueSelector_label">VALUE</string>
    <string name="valueBarLabel">CURRENT VALUE</string>
    <string name="hint_username">Enter a new username</string>
    <string name="hint_email_reset">Enter your email</string>
    <string name="enter_group_name">Enter group name</string>
    <string name="stringValue1">itme</string>
    <string name="cradit">Credit</string>
    <string name="debit">Debit</string>
    <string name="clear">Clear</string>
    <string name="save">Save</string>
    <string name="cr">Cr</string>
    <string name="dr">Dr</string>
    <string name="no">No</string>
    <string name="index">No</string>
    <string name="date">Date</string>
    <string name="validate_date">Select Date</string>
    <string name="total">Total</string>
    <string name="detail">Detial:</string>
    <string name="detail_header">Detial</string>
    <string name="add_Transaction">Add Transaction</string>
    <string name="addcustomer">Add Customer</string>
    <string name="show_Transaction">View Transaction</string>
    <string name="select_custome_image">Select Customer Image</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_custome_name">Enter customer name</string>
    <string name="hint_mobile_number">Enter mobile number</string>
    <string name="hint_address">Enter address</string>
    <string name="hint_amount">Enter amount</string>
    <string name="validation_amount">Amount Required</string>
    <string name="validation_amount_greter_then_">Enter amount needed to greater than 0</string>
    <string name="valid_amount">Select Any Option for Transaction</string>
    <string name="hint_descraption">Enter Detail</string>
    <string name="home">Home</string>
    <string name="logout">Logout</string>
    <string name="view_customer">View Customer</string>
    <string name="dialog_default_title">Here\'s a message!</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Clear</string>
    <string name="LOADING">Loading...</string>
    <string name="customer_delete_alert">Are you sure delete this customer ?</string>
    <string name="yest_delete_it">Yes,delete it!</string>
    <string name="yes">Yes</string>
    <string name="remove_successfully">Remove Successfully</string>
    <string name="failure_try_again">Failure try again</string>
    <string name="backup">Backup</string>
    <string name="seeting">Setting</string>
    <string name="userprofile_uplaod_alert_messag">Do you want to upload your profile</string>
    <string name="no_">No</string>
    <string name="transanction_delete_alert_message">Are you Sure Delete Transaction</string>
    <string name="transanction_update_success_message">Transaction Update</string>
    <string name="no_transacation">No Transaction</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="select_date">Select Date</string>


    <string name="title_activity_backup">Backup And Restore</string>
    <string name="activity_backup_lblBackupDate">Last Backup Date :</string>
    <string name="activity_backup_txtDate">No Backup yet</string>
    <string name="activity_backup_lblCloudBackupDate">Last Cloud Backup Date :</string>
    <string name="activity_backup_txtCloudDate">No Backup yet</string>
    <string name="activity_backup_btnBackup">Backup</string>
    <string name="activity_backup_btnRestore">Import</string>
    <string name="activity_backup_btnCloudBackup">Cloud Backup</string>
    <string name="activity_backup_btnCloudRestore">Cloud import</string>
    <string name="not_found">Not Found</string>
    <string name="customer_payment_data_not">Today is not any customer payment date</string>


    <string name="do_you_want_change_languge">Do you want to change language..?</string>
    <string name="mobie_number_not_current">Mobile number not currect</string>
    <string name="customer_required">Customer name is required</string>
    <string name="customer_add_success_full">Customer Added Successfully</string>
    <string name="add_customer">Add Customer</string>
    <string name="transcation_success_messag">Transactions detail upload Successfully</string>
    <string name="add_transcation">Add Transactions</string>
    <string name="customer_list">Customer List</string>
    <string name="nan">Nan</string>
    <string name="profile_upload_message">Your profile uploaded</string>
    <string name="failure">Failure try again</string>
    <string name="enter_custmer_seaach_validation">Enter customer name do you want</string>
    <string name="serach_customer">Serach customer</string>
    <string name="payment_term">Payment term date:</string>
    <string name="not_payment_term">No Payment term</string>
    <string name="year_ago">year ago</string>
    <string name="years">years ago</string>
    <string name="yeargo">year to go</string>
    <string name="years_go">years to go</string>
    <string name="monthsago">months ago</string>
    <string name="month_ago">month ago</string>
    <string name="months_go">months to go</string>
    <string name="month_go">month to go</string>
    <string name="weeks_ago">weeks ago</string>
    <string name="week_ago">week ago</string>
    <string name="weeks_to_go">weeks to go</string>
    <string name="week_to_go">week to go</string>
    <string name="days_ago">days ago</string>
    <string name="days_to_go">days to go</string>
    <string name="day_to_go">Tomorrow</string>
    <string name="day_to_ago">Yesterday</string>
    <string name="today">Today</string>
    <string name="no_index">No</string>
    <string name="name">Name</string>
    <string name="mobile">Mobile</string>
    <string name="address">Address</string>
    <string name="customer">Customer List</string>
    <string name="gengratexclfile">Generate Excel file</string>
    <string name="Enter_file_name">Enter file name</string>
    <string name="cancel">cancel</string>
    <string name="direcory_create_error">Unable to create directory. Retry</string>
    <string name="excle_file_create_success_messge">Excel Sheet successfully Created </string>
    <string name="excle_file_not_found">Excel Sheet Not Found </string>
    <string name="excle_sheet_creat">Excel sheet Create</string>
    <string name="try_again">Try again</string>
    <string name="trnsaction_list">Transaction List</string>
    <string name="share_excle_file">Share Excel File</string>
    <string name="get_amount">Get Amount</string>
    <string name="customer_name">Customer Name:</string>
    <string name="today_payment_date_customer_list">Today Payment Date Customer list</string>
    <string name="customer_paument_date_today">Today is customers payment date</string>
    <string name="amount">Amount</string>
    <string name="payment_date_fragment">Payment Date</string>
    <string name="success_message_customer_add">Customer has successfully added</string>
    <string name="customer_name_existe_message">This name is already exists please enter different name</string>
    <string name="close">close</string>
    <string name="backUp_fragment">BackUp</string>
    <string name="clear_database">Clear Database</string>
    <string name="back_up_file_name">Enter Backup Name file name</string>
    <string name="restore_dataabse">Restore database</string>
    <string name="unable_creat_dirrectory">Unable to create directory. Retry</string>
    <string name="unable_try_again">Unable to restore. Retry</string>
    <string name="folder_error">Backup folder not present. Do a backup before a restore!</string>
    <string name="error_google_drive_time">Error on loading Google Drive. Retry</string>
    <string name="google_drive_error">Error on loading from Google Drive. Retry</string>
    <string name="import_complet">Successfully </string>
    <string name="error_laoding">Error on loading</string>
    <string name="show_transcation">View Transaction</string>

    <string name="confirm_message_for_database_clear">Do you want to clear database ?
     if you yes do, then all detail are removed in database</string>
    <string name="enter_password_one_time">Enter One Time Password</string>
    <string name="hint_enter_password">Enter password</string>
    <string name="password_wrong_contact_addmin">Your password is wrong please try again otherwise contact Admin</string>
    <string name="database_clear">Database successfully Deleted</string>
    <string name="backup_successfully_save_in_google_drive">Backup successfully saved in Google drive</string>
    <string name="payment_term_dialog"><![CDATA[Payment Term =>]]></string>
    <string name="file_is_not_support_excle">No Application Available to View Excel</string>
    <string name="show_excel_file">View excel files</string>
    <string name="not_found_excel_file">Not an excel file</string>
    <string name="excel_file">Your Excel file</string>
    <string name="total_customer">Total Customers</string>
    <string name="payment_customer">Payment Customers</string>
    <string name="total_credit">Total Credit</string>
    <string name="total_debit">Total Debit</string>
    <string name="tomorrow_payment_date">Tomorrow not any customer payment date</string>
    <string name="today_date">Today Date:</string>
    <string name="customer_list_tomorrow_pay">Customers list of payment date at tomorrow =></string>
    <string name="customer_edit">Customer Edit</string>
    <string name="update_customer">Updated customer successfully</string>
    <string name="not_found_excel">No found any Excel file</string>
    <string name="not_internate">No Internet Connection Please check internet connection</string>
    <string name="that_date_not_payment_customer"> Date not any  customer for payment </string>
    <string name="edit_transaction">Edit Transaction</string>
    <string name="please_contact_to_admin">Please contact to admin M:9898158508</string>
    <string name="emai_empty">Please enter email address</string>
    <string name="email__not_valid">Email is not valid</string>
    <string name="password_empty">Please enter password</string>
    <string name="enter_password">Please enter password</string>
    <string name="enter_pass_confirm">Please enter confirm password</string>
    <string name="not_match">Password and confirm password does not match try again</string>
    <string name="confirm_password">Confirm password</string>
    <string name="set_one_time_password">Set one time password</string>
    <string name="not_match_one_time_password">Not match one time password try again</string>
    <string name="confirm_one_time_password">One Time Password</string>
    <string name="minimum_four_digit">Please enter minimum 4 digit</string>
    <string name="one_time_password_ask_every_time">One time password ask every time</string>
    <string name="one_time_password_change">Your one time password changed</string>
    <string name="old_pasworrd">Old password</string>
    <string name="change_password">Change Password</string>
    <string name="old_password_not_match">Old password does not match try again</string>
    <string name="old_password_empty">Please enter old password</string>


</resources>