<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/header"
    android:gravity="center"
    android:background="@color/gray"
    android:weightSum="1">

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.10"
        android:singleLine="true"
        android:textSize="@dimen/sp_18"
        android:gravity="center_horizontal|center_vertical"
        android:paddingBottom="@dimen/dp_5"
        android:paddingTop="@dimen/dp_5"
        android:textColor="@color/white"
        android:text="@string/index"
        />
    <TextView
        android:layout_width="0dp"
        android:textColor="@color/white"
        android:paddingBottom="@dimen/dp_5"
        android:singleLine="true"
        android:paddingTop="@dimen/dp_5"
        android:textSize="@dimen/sp_18"
        android:gravity="center_horizontal|center_vertical"
        android:layout_height="wrap_content"
        android:layout_weight="0.15"
        android:text="@string/date"
        />
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:singleLine="true"
        android:paddingBottom="@dimen/dp_5"
        android:textSize="@dimen/sp_18"
        android:paddingTop="@dimen/dp_5"
        android:gravity="center_horizontal|center_vertical"
        android:layout_weight="0.25"
        android:text="@string/detail_header"/>

    <TextView
        android:layout_width="0dp"
        android:gravity="center_horizontal|center_vertical"
        android:paddingBottom="@dimen/dp_5"
        android:paddingTop="@dimen/dp_5"
        android:textSize="@dimen/sp_18"
        android:textColor="@color/white"
        android:layout_height="wrap_content"
        android:layout_weight="0.25"
        android:text="@string/cr"
        />
    <TextView
        android:layout_width="0dp"
        android:textColor="@color/white"
        android:gravity="center_horizontal|center_vertical"
        android:paddingBottom="@dimen/dp_5"
        android:layout_marginRight="@dimen/dp_1"
        android:textSize="@dimen/sp_18"
        android:paddingTop="@dimen/dp_5"
        android:layout_height="wrap_content"
        android:layout_weight="0.25"
        android:text="@string/dr"
        />

</LinearLayout>