<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_background">
   <TextView
       android:layout_width="wrap_content"
       android:gravity="center"
       android:layout_height="@dimen/dp_40"
       android:text="@string/close"
       android:id="@+id/tv_close"
       android:layout_toLeftOf="@+id/iv_close"/>

    <ImageView
        android:layout_width="@dimen/dp_30"
        android:layout_height="@dimen/dp_30"
        android:layout_alignParentRight="true"
        android:id="@+id/iv_close"
        android:layout_margin="@dimen/dp_10"
        android:src="@drawable/cancel"/>
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/iv_close"
    android:layout_marginLeft="@dimen/dp_20"
    android:layout_marginRight="@dimen/dp_20"
   >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="@color/colorPrimary"
        android:padding="@dimen/dp_5"
        android:textStyle="bold"
        android:text="@string/edit_transaction"/>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/edt_amout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:maxLength="9"
            android:inputType="number"
            style="@style/App_EditTextStyle"
            android:hint="@string/hint_amount" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/edt_descraption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="4"
            style="@style/App_EditTextStyle"
            android:hint="@string/hint_descraption" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/tv_date"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:text="@string/select_date"
        style="@style/App_EditTextStyle"
        />
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_gravity="center"
        android:gravity="center"
        android:id="@+id/rgp"
        android:orientation="horizontal">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cradit"
            android:layout_marginRight="@dimen/dp_10"
            android:textColor="@color/black"
            android:id="@+id/radio_cradit"
            android:textStyle="bold" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radio_debit"
            android:textColor="@color/black"
            android:text="@string/debit"
            android:textStyle="bold" />
    </RadioGroup>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:visibility="visible"
        android:id="@+id/ll_payment_term"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:padding="@dimen/dp_10"
            android:id="@+id/tv_payment_date_selected"
            android:layout_height="wrap_content"
            android:layout_weight="0.50"
            android:gravity="center"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:text="@string/payment_term"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_10"
            android:background="@drawable/edit_text_serach_bg"
            android:layout_weight="0.40"
            android:id="@+id/tv_payment_data"
            android:textStyle="bold"
            android:text="@string/select_date"/>
        <ImageView
            android:layout_width="0dp"
            android:layout_weight="0.10"
            android:id="@+id/reset"
            android:src="@drawable/refresh"
            android:scaleType="centerInside"
            android:layout_height="@dimen/dp_40" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginBottom="@dimen/dp_30"
        android:orientation="horizontal">
        <android.support.v7.widget.CardView
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            card_view:cardBackgroundColor="#ffd9d9d9"
            card_view:cardCornerRadius="6dp"
            android:layout_margin="6dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Button"
                android:id="@+id/btn_save"
                android:text="@string/update"/>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            card_view:cardBackgroundColor="#ffd9d9d9"
            card_view:cardCornerRadius="6dp"
            android:layout_margin="6dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Button"
                android:id="@+id/btn_clear"
                android:text="@string/dialog_cancel"/>
        </android.support.v7.widget.CardView>
        </LinearLayout>

</LinearLayout>
</RelativeLayout>