<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context="com.example.agc_linux.accounting.fragment.AddTranscationFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="@dimen/dp_10"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_customer_name"
            style="@style/App_EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="@dimen/dp_10"
            android:background="@color/white"
            android:textColor="@color/black"
            android:clickable="false"
            android:editable="false"
            android:text="" />
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="false">
            <EditText
                android:id="@+id/edt_amout"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="number"
                android:maxLength="9"
                style="@style/App_EditTextStyle"
                android:hint="@string/hint_amount" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            app:errorEnabled="false"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/edt_descraption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="4"
                style="@style/App_EditTextStyle"
                android:hint="@string/hint_descraption" />
        </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/tv_date"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:hint="@string/validate_date"
                style="@style/App_EditTextStyle"
                />
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_gravity="center"
            android:gravity="center"
            android:id="@+id/rgp"
            android:orientation="horizontal">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/dp_30"
                android:text="@string/cradit"
                android:id="@+id/radio_cradit"
                android:textStyle="bold" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radio_debit"
                android:text="@string/debit"
                android:textStyle="bold" />
        </RadioGroup>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:visibility="gone"
            android:id="@+id/ll_payment_term"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:padding="@dimen/dp_10"
                android:id="@+id/tv_payment_date_selected"
                android:layout_height="wrap_content"
                android:layout_weight="0.50"
                android:textStyle="bold"
                android:text="@string/payment_term"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center"
                android:background="@drawable/edit_text_serach_bg"
                android:padding="@dimen/dp_10"
                android:layout_weight="0.50"
                android:id="@+id/tv_payment_data"
                android:textStyle="bold"
                android:text="@string/select_date"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="@dimen/dp_20"
            android:orientation="horizontal">
            <android.support.v7.widget.CardView
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                card_view:cardBackgroundColor="#ffd9d9d9"
                card_view:cardCornerRadius="6dp"
                android:layout_margin="6dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Button"
                    android:id="@+id/btn_save"
                    android:text="@string/save"/>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                card_view:cardBackgroundColor="#ffd9d9d9"
                card_view:cardCornerRadius="6dp"
                android:layout_margin="6dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Button"
                    android:id="@+id/btn_clear"
                    android:text="@string/clear"/>
            </android.support.v7.widget.CardView>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>
