<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_30"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:id="@+id/tv_title"
                android:text="@string/set_one_time_password"
                android:padding="@dimen/dp_10"
                android:layout_centerHorizontal="true"
                android:textColor="@color/blue"
                android:background="@drawable/edit_text_bg"
                android:textSize="18sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <EditText
            android:id="@+id/edt_oldpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_bg_edit"
            android:hint="@string/old_pasworrd"
            android:padding="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_30"
            android:inputType="textPassword"
            android:paddingBottom="2dp"
            android:visibility="gone"
            android:textColor="#2fa881"
            android:textCursorDrawable="@drawable/bg_input_cursor"
            android:textSize="13sp" />

        <EditText
                    android:id="@+id/edt_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/selector_bg_edit"
                    android:hint="@string/Password"
                    android:padding="@dimen/dp_10"
                    android:layout_marginTop="@dimen/dp_30"
                    android:inputType="textPassword"
                    android:paddingBottom="2dp"
                    android:textColor="#2fa881"
                    android:textCursorDrawable="@drawable/bg_input_cursor"
                    android:textSize="13sp" />

                  <EditText
                    android:id="@+id/edt_password_confirm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/selector_bg_edit"
                    android:hint="@string/confirm_password"
                      android:layout_marginTop="@dimen/dp_10"
                      android:inputType="textPassword"
                    android:paddingBottom="10dp"
                    android:padding="@dimen/dp_10"
                    android:textColor="#2fa881"
                    android:textCursorDrawable="@drawable/bg_input_cursor"
                    android:textSize="13sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="25dp"
            android:gravity="center">

            <Button
                android:id="@+id/btn_go"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:background="@drawable/bt_shape"
                android:stateListAnimator="@drawable/state_list_animator_z"
                android:text="@string/go"
                android:textColor="@color/white"
                />
        </RelativeLayout>

    </LinearLayout>
</RelativeLayout>